--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "ejs": "^2.5.7",
     "express": "~4.14.0",
     "express-session": "^1.15.6",
     "moment": "^2.20.1",
